--- a/jenkinsfile
+++ b/jenkinsfile
@@ -298,6 +298,7 @@ podTemplate(
             }
             stage ('Create Application Secrets') {
                 //Create whatever secrets are needed for application deployment and running.
+                //Nothing needed for HotFix since it won't be deployed, just leave whats there for regular releases.
                     
                 // Will need to create uniqu credentials for all environments that have unique values.
                 // e.g. dev-rails-master-key, stg-rails-master-key, prd-rails-master-key, rel-rails-master-key
@@ -320,7 +321,6 @@ podTemplate(
                 if (RELEASE_TYPE == 'develop' || \
                     RELEASE_TYPE == 'stage' || \
                     RELEASE_TYPE == 'release' || \
-                    RELEASE_TYPE == 'hotfix' || \
                     RELEASE_TYPE == 'master' ) {
                     //Application Secrets
                     sh """
